--- a/web/src/assets/css/common.less
+++ b/web/src/assets/css/common.less
@@ -84,12 +84,10 @@
               padding-left:30px;
               // TODO 撑大二级菜单的面积，无论项目多少
               min-height: 100%;
-
               .sub-list-ul {
                 .sub-list-li {
                   padding:15px 0 12px;
                   overflow: hidden;
-
                   .main {
                     float:left;
                     width:110px;
@@ -97,7 +95,6 @@
                   }
                   .list {
                     float:left;
-
                     ul {
                       overflow: hidden;
                       li {
@@ -125,15 +122,12 @@
         display:block;
       }
     }
-
     .searchbar {
       margin-top:15px;
       margin-left:40px;
       position: relative;
-
       .search {
         .type,.btn,.keyword {float:left}
-
         .type {
           width:62px;height:48px;
           line-height:48px;text-align:center;
@@ -151,7 +145,6 @@
           border:1px solid #23b8ff;
           text-align:center;
           cursor: pointer;
-
           .icon {
             width:20px;height:20px;
             margin-top:12px;
@@ -161,48 +154,41 @@
       
       .list {
         display:none;
-
         position: absolute;
         left:0;top:100%;
         width:100%;
         background:#FFF;
         padding-bottom:10px;
         box-shadow:0 0 2px #CCC;
-
         .title {color:#999;padding:14px;}
         ul {
           li {
             padding:6px 30px;
             font-size:16px;
             cursor: pointer;
-
             &:hover {background:#EEE;}
           }
         }
       }
-      &:hover .list {display:block;}
+      // TODO 搜索课程结果一览
+      // &:hover .list {display:block;}
     }
   }
 
   //right
   .right {
     .btn,.user {float: left;margin-left:20px;}
-
     .btn {
       height:80px;line-height:80px;
       cursor: pointer;
     }
-
     .user{
       padding:22px 0;
-
       .avatar,.nickname {float:left}
-
       .avatar {
         width:36px;height:36px;
         border-radius:50%;
         overflow: hidden;
-
         img {
           display:block;width:100%;height:100%;
         }
@@ -211,7 +197,6 @@
         margin-left:6px;
         height:36px;line-height:36px;
         max-width:100px;
-
         overflow:hidden;
         word-break:keep-all;
         text-overflow: ellipsis;
@@ -223,20 +208,16 @@
 .g-footer {
   * {color:#999}
   a:hover {color:#999;text-decoration:underline;}
-
   background-color:#444546;
   padding-top: 44px;padding-bottom:50px;
-
   .links {
     h2 {
       font-size:22px;
       margin-bottom:30px;
     }
-
     .link-list {
       overflow:hidden;
       border-bottom:1px solid #48494b;
-
       a {
         float:left;
         margin-right:30px;margin-bottom:14px;
